--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/css1.css">
     <link rel="stylesheet" href="./css/css2.css">
     <link rel="stylesheet" href="./font/fontawesome-free-6.2.0-web/css/all.min.css">
-    <title>Document</title>
+    <title>MyMusic</title>
 </head>
 <body>
     <div class="container">
